<resources>
    <string name="app_name">Faith-Breed</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="retry">RETRY</string>
    <string name="app_is_loading">App is loading...</string>
    <string name="payment_cancelled">Payment Cancelled</string>
    <string name="go_to_homepage">GO TO HOMEPAGE</string>
    <string name="top_up_again">TOP UP AGAIN</string>
    <string name="top_up_with">Top up with</string>
    <string name="proceed">Proceed</string>
    <string name="add_money">Add Money</string>
    <string name="wallet_info">Topping your wallet balance  makes downloading of messages faster   and convenient</string>
    <string name="downloads">downloads</string>
    <string name="wallet">Wallet</string>
    <string name="music_library">music library</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="send">SEND</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="version">Version</string>
    <string name="version_code">1.0</string>
    <string name="description">Description</string>
    <string name="faithbreed">FaithBreed</string>
    <string name="app_desc">Download Pastor\'s Messages for just 100.00NGN when you top up your wallet.\nListen to messages online for free</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="nav_header_desc">Avatar</string>
    <string name="nav_header_title">Worker</string>
    <string name="nav_header_subtitle">harjacober@gmail.com</string>
    <string name="all_messages">All Messages</string>
    <string name="faith_alive">Faith Alive</string>
    <string name="series">Series</string>
    <string name="sundays_and_wednesdays">Sundays and Wednesdays</string>
    <string name="short_clips">Short Clips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
