<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutApp"
    android:background="#37966F"
    android:orientation="vertical"
    android:padding="32dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faithbreed"
        android:textSize="30sp"
        android:textColor="#ffffff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColor="#FD5523"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_desc"
        android:textSize="18sp"
        android:textColor="#ffffff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColor="#FD5523"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_code"
        android:textSize="18sp"
        android:textColor="#ffffff"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LICENSES"
        android:textColor="#ffffff"
        android:layout_marginTop="16dp"
        android:id="@+id/licenses"
        android:onClick="OnLicensesClicked"/>

</LinearLayout>